hphp/hack/test/typecheck/expression_trees/nullsafe_property_access_error.php.exp
ERROR: File "nullsafe_property_access_error.php", line 8, characters 16-27:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 404, characters 26-35:
  Expected `int`
  File "nullsafe_property_access_error.php", line 8, characters 16-27:
  But got `?int` (use of `?->` operator)
